tests/ui/traits/const-traits/const-supertraits-dyn-compat.stderr
error[E0038]: the trait `Unconditionally` is not dyn compatible
  --> $DIR/const-supertraits-dyn-compat.rs:8:17
   |
LL |     let _: &dyn Unconditionally;
   |                 ^^^^^^^^^^^^^^^ `Unconditionally` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/const-supertraits-dyn-compat.rs:6:30
   |
LL | const trait Unconditionally: const Super {}
   |             ---------------  ^^^^^^^^^^^ ...because it cannot have a `const` supertrait
   |             |
   |             this trait is not dyn compatible...

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
